--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -185,8 +185,9 @@ font:
 colors:
   # Default colors
   primary:
-    # hard contrast: background = '#1d2021'
-    background: '#282828'
+    # hard contrast:
+    background : '#1d2021'
+    #background: '#282828'
     # soft contrast: background = '#32302f'
     foreground: '#ebdbb2'
 
@@ -243,8 +244,8 @@ colors:
 #
 # Window opacity as a floating point number from `0.0` to `1.0`.
 # The value `0.0` is completely transparent and `1.0` is opaque.
-background_opacity: 1.0
-# background_opacity: 0.95
+# background_opacity: 1.0
+# background_opacity: 0.50
 
 #selection:
   #semantic_escape_chars: ",│`|:\"' ()[]{}<>\t"
