--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -412,12 +412,12 @@ interval = 1.0
 date = %A %d %B
 
 ; Optional time format
-time = at %I:%M %p
+time = %I:%M %p
 
 ; if `date-alt` or `time-alt` is defined, clicking
 ; the module will toggle between formats
-date-alt = %A, %d/%m/%Y
-time-alt = at %k:%M:%S
+date-alt = %A %d/%m/%Y
+time-alt = %k:%M:%S
 
 ; Available tags:
 ;   <label> (default)
@@ -513,8 +513,8 @@ label = %notifications%
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
-;;[module/i3]
-;;type = internal/i3
+[module/i3]
+type = internal/i3
 
 ; Only show workspaces defined on the same output as the bar
 ;
@@ -522,62 +522,64 @@ label = %notifications%
 ; on different bars
 ;
 ; Default: false
-;;pin-workspaces = true
+pin-workspaces = true
 
 ; This will split the workspace name on ':'
 ; Default: false
-;;strip-wsnumbers = true
+strip-wsnumbers = true
 
 ; Sort the workspaces by index instead of the default
 ; sorting that groups the workspaces by output
 ; Default: false
-;;index-sort = true
+index-sort = true
 
 ; Create click handler used to focus workspace
 ; Default: true
-;;enable-click = false
+enable-click = false
 
 ; Create scroll handlers used to cycle workspaces
 ; Default: true
-;;enable-scroll = false
+enable-scroll = false
 
 ; Wrap around when reaching the first/last workspace
 ; Default: true
-;;wrapping-scroll = false
+wrapping-scroll = false
 
 ; Set the scroll cycle direction 
 ; Default: true
-;;reverse-scroll = false
+reverse-scroll = false
 
 ; Use fuzzy (partial) matching on labels when assigning 
 ; icons to workspaces
 ; Example: code;♚ will apply the icon to all workspaces 
 ; containing 'code' in the label
 ; Default: false
-;;fuzzy-match = true
+fuzzy-match = true
 
-; ws-icon-[0-9]+ = label;icon
-; NOTE: The label needs to match the name of the i3 workspace
-;;ws-icon-0 = 1;♚
-;;ws-icon-1 = 2;♛
-;;ws-icon-2 = 3;♜
-;;ws-icon-3 = 4;♝
-;;ws-icon-4 = 5;♞
-;;ws-icon-default = ♟
+; ws-icon-[0-9]+ = <label>;<icon>
+; NOTE: The <label> needs to match the name of the i3 workspace
+; Neither <label> nor <icon> can contain a semicolon (;)
+ws-icon-0 = 1;♚
+ws-icon-1 = 2;♛
+ws-icon-2 = 3;♜
+ws-icon-3 = 4;♝
+ws-icon-4 = 5;♞
+ws-icon-default = ♟
 ; NOTE: You cannot skip icons, e.g. to get a ws-icon-6
 ; you must also define a ws-icon-5.
+; NOTE: Icon will be available as the %icon% token inside label-*
 
 ; Available tags:
 ;   <label-state> (default) - gets replaced with <label-(focused|unfocused|visible|urgent)>
 ;   <label-mode> (default)
-;;format = <label-state> <label-mode>
+format = <label-state> <label-mode>
 
 ; Available tokens:
 ;   %mode%
 ; Default: %mode%
-;;label-mode = %mode%
-;;label-mode-padding = 2
-;;label-mode-background = #e60053
+label-mode = %mode%
+label-mode-padding = 2
+label-mode-background = ${color.blshade2}
 
 ; Available tokens:
 ;   %name%
@@ -585,11 +587,11 @@ label = %notifications%
 ;   %index%
 ;   %output%
 ; Default: %icon%  %name%
-;;label-focused = %index%
-;;label-focused-foreground = #ffffff
-;;label-focused-background = #3f3f3f
-;;label-focused-underline = #fba922
-;;label-focused-padding = 4
+label-focused = %name%
+label-focused-foreground = #ffffff
+label-focused-background = #3f3f3f
+; label-focused-underline = #fba922
+label-focused-padding = 2
 
 ; Available tokens:
 ;   %name%
@@ -597,8 +599,8 @@ label = %notifications%
 ;   %index%
 ;   %output%
 ; Default: %icon%  %name%
-;;label-unfocused = %index%
-;;label-unfocused-padding = 4
+label-unfocused = %name%
+label-unfocused-padding = 2
 
 ; Available tokens:
 ;   %name%
@@ -606,9 +608,9 @@ label = %notifications%
 ;   %index%
 ;   %output%
 ; Default: %icon%  %name%
-;;label-visible = %index%
-;;label-visible-underline = #555555
-;;label-visible-padding = 4
+label-visible = %name%
+label-visible-underline = #555555
+label-visible-padding = 2
 
 ; Available tokens:
 ;   %name%
@@ -616,15 +618,15 @@ label = %notifications%
 ;   %index%
 ;   %output%
 ; Default: %icon%  %name%
-;;label-urgent = %index%
-;;label-urgent-foreground = #000000
-;;label-urgent-background = #bd2c40
-;;label-urgent-padding = 4
+label-urgent = %name%
+label-urgent-foreground = #000000
+label-urgent-background = #bd2c40
+label-urgent-padding = 2
 
 ; Separator in between workspaces
-;;label-separator = |
-;;label-separator-padding = 2
-;;label-separator-foreground = #ffb52a
+; label-separator = |
+; label-separator-padding = 1
+; label-separator-foreground = #ffb52a
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
@@ -1070,96 +1072,96 @@ label-maxlen = 25
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
-[module/openbox]
-type = internal/xworkspaces
+; [module/openbox]
+; type = internal/xworkspaces
 
-; Only show workspaces defined on the same output as the bar
-;
-; Useful if you want to show monitor specific workspaces
-; on different bars
-;
-; Default: false
-pin-workspaces = true
+; ; Only show workspaces defined on the same output as the bar
+; ;
+; ; Useful if you want to show monitor specific workspaces
+; ; on different bars
+; ;
+; ; Default: false
+; pin-workspaces = true
 
-; Create click handler used to focus desktop
-; Default: true
-enable-click = true
+; ; Create click handler used to focus desktop
+; ; Default: true
+; enable-click = true
 
-; Create scroll handlers used to cycle desktops
-; Default: true
-enable-scroll = true
+; ; Create scroll handlers used to cycle desktops
+; ; Default: true
+; enable-scroll = true
 
-; icon-[0-9]+ = <desktop-name>;<icon>
-; NOTE: The desktop name needs to match the name configured by the WM
-; You can get a list of the defined desktops using:
-; $ xprop -root _NET_DESKTOP_NAMES
-icon-0 = 1;
-icon-1 = 2;
-icon-2 = 3;
-icon-3 = 4;
-icon-4 = 5;
-icon-default = 
+; ; icon-[0-9]+ = <desktop-name>;<icon>
+; ; NOTE: The desktop name needs to match the name configured by the WM
+; ; You can get a list of the defined desktops using:
+; ; $ xprop -root _NET_DESKTOP_NAMES
+; icon-0 = 1;
+; icon-1 = 2;
+; icon-2 = 3;
+; icon-3 = 4;
+; icon-4 = 5;
+; icon-default = 
 
-; Available tags:
-;   <label-monitor>
-;   <label-state> - gets replaced with <label-(active|urgent|occupied|empty)>
-; Default: <label-state>
-format = <label-state>
-format-padding = 0
+; ; Available tags:
+; ;   <label-monitor>
+; ;   <label-state> - gets replaced with <label-(active|urgent|occupied|empty)>
+; ; Default: <label-state>
+; format = <label-state>
+; format-padding = 0
 
-; Available tokens:
-;   %name%
-; Default: %name%
-label-monitor = %name%
+; ; Available tokens:
+; ;   %name%
+; ; Default: %name%
+; label-monitor = %name%
 
-; Available tokens:
-;   %name%
-;   %icon%
-;   %index%
-; Default: %icon%  %name%
-label-active = "%name%"
-label-active-foreground = ${color.pink}
-; label-active-background = ${color.bg}
-;;label-active-underline = ${color.ac}
-label-active-overline = ${color.pink}
+; ; Available tokens:
+; ;   %name%
+; ;   %icon%
+; ;   %index%
+; ; Default: %icon%  %name%
+; label-active = "%name%"
+; label-active-foreground = ${color.pink}
+; ; label-active-background = ${color.bg}
+; ;;label-active-underline = ${color.ac}
+; label-active-overline = ${color.pink}
 
-; Available tokens:
-;   %name%
-;   %icon%
-;   %index%
-; Default: %icon%  %name%
-label-occupied = "%name%"
-label-occupied-foreground = ${color.blue}
-; label-occupied-background = ${color.bg}
-;;label-occupied-underline = ${color.ac}
-;;label-occupied-overline = ${color.ac}
+; ; Available tokens:
+; ;   %name%
+; ;   %icon%
+; ;   %index%
+; ; Default: %icon%  %name%
+; label-occupied = "%name%"
+; label-occupied-foreground = ${color.blue}
+; ; label-occupied-background = ${color.bg}
+; ;;label-occupied-underline = ${color.ac}
+; ;;label-occupied-overline = ${color.ac}
 
-; Available tokens:
-;   %name%
-;   %icon%
-;   %index%
-; Default: %icon%  %name%
-label-urgent = "%name% "
-label-urgent-foreground = ${color.ac}
-; label-urgent-background = ${color.bg}
-;;label-urgent-underline = ${color.ac}
-label-urgent-overline = ${color.ac}
+; ; Available tokens:
+; ;   %name%
+; ;   %icon%
+; ;   %index%
+; ; Default: %icon%  %name%
+; label-urgent = "%name% "
+; label-urgent-foreground = ${color.ac}
+; ; label-urgent-background = ${color.bg}
+; ;;label-urgent-underline = ${color.ac}
+; label-urgent-overline = ${color.ac}
 
-; Available tokens:
-;   %name%
-;   %icon%
-;   %index%
-; Default: %icon%  %name%
-label-empty = "%name% "
-label-empty-foreground = ${color.fg}
-; label-empty-background = ${color.bg}
-;;label-empty-underline = ${color.ac}
-;;label-empty-overline = ${color.ac}
+; ; Available tokens:
+; ;   %name%
+; ;   %icon%
+; ;   %index%
+; ; Default: %icon%  %name%
+; label-empty = "%name% "
+; label-empty-foreground = ${color.fg}
+; ; label-empty-background = ${color.bg}
+; ;;label-empty-underline = ${color.ac}
+; ;;label-empty-overline = ${color.ac}
 
-label-active-padding = 1
-label-urgent-padding = 1
-label-occupied-padding = 1
-label-empty-padding = 1
+; label-active-padding = 1
+; label-urgent-padding = 1
+; label-occupied-padding = 1
+; label-empty-padding = 1
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 ;;	    __________  ______
