--- a/.config/polybar/user_modules.ini
+++ b/.config/polybar/user_modules.ini
@@ -10,6 +10,11 @@
 ;;
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
+[module/dualdisplay]
+type = custom/text
+content = dual
+click-left = ~/.config/polybar/scripts/dual_display.sh &
+
 [module/checknetwork]
 type = custom/script
 
