--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -109,7 +109,8 @@ font:
     #   - (macOS) Menlo
     #   - (Linux/BSD) monospace
     #   - (Windows) Consolas
-    family: 'FiraCode Nerd Font'
+    #family: 'FiraCode Nerd Font'
+    family: 'JetBrainsMono Nerd Font'
 
     # The `style` can be specified to pick a specific face.
     style: Regular
@@ -120,8 +121,9 @@ font:
     #
     # If the bold family is not specified, it will fall back to the
     # value specified for the normal font.
-    family: 'FiraCode Nerd Font'
+    #family: 'FiraCode Nerd Font'
 
+    family: 'JetBrainsMono Nerd Font'
     # The `style` can be specified to pick a specific face.
     style: Bold
 
@@ -131,8 +133,9 @@ font:
     #
     # If the italic family is not specified, it will fall back to the
     # value specified for the normal font.
-    family: 'FiraCode Nerd Font'
-
+    #family: 'FiraCode Nerd Font'
+    
+    family: 'JetBrainsMono Nerd Font'
     # The `style` can be specified to pick a specific face.
     style: Italic
 
@@ -142,8 +145,9 @@ font:
     #
     # If the bold italic family is not specified, it will fall back to the
     # value specified for the normal font.
-    family: 'FiraCode Nerd Font'
+    #family: 'FiraCode Nerd Font'
 
+    family: 'JetBrainsMono Nerd Font'
     # The `style` can be specified to pick a specific face.
     style: Bold Italic
 
@@ -256,14 +260,14 @@ colors:
 # Allow terminal applications to change Alacritty's window title.
 #dynamic_title: true
 
-#cursor:
+cursor:
   # Cursor style
   #
   # Values for `style`:
   #   - ▇ Block
   #   - _ Underline
   #   - | Beam
-  #style: Block
+  style: Block
 
   # If this is `true`, the cursor will be rendered as a hollow box when the
   # window is not focused.
