--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -133,7 +133,7 @@ module-margin-right = 1
 ;   font-3 = FontAwesome:size=10
 ; See the Fonts wiki page for more details
 
-font-0 = "Scientifica:size=8;2"
+font-0 = "NotoSans-Regular:size=8;2"
 font-1 = "waffle:size=12;2"
 
 ; Modules are added to one of the available blocks
@@ -162,7 +162,7 @@ font-1 = "waffle:size=12;2"
 modules-left = launcher i3 sep2 filesystem memory_bar cpu_bar
 modules-center = title sep date
 ; modules-right = spotify sep style sep battery network sep volume brightness sysmenu
-modules-right = spotify sep battery network sep volume brightness
+modules-right = spotify sep dualdisplay battery network sep volume brightness
 
 ; The separator will be inserted between the output of each module
 separator =
@@ -206,7 +206,7 @@ tray-maxsize = 16
 ; Enable pseudo transparency
 ; Will automatically be enabled if a fully transparent
 ; background color is defined using `tray-background`
-tray-transparent = false
+#tray-transparent = false
 
 ; Background color for the tray container 
 ; ARGB color (e.g. #f00, #ff992a, #ddff1023)
@@ -454,7 +454,7 @@ tray-maxsize = 16
 ; Enable pseudo transparency
 ; Will automatically be enabled if a fully transparent
 ; background color is defined using `tray-background`
-tray-transparent = false
+#tray-transparent = false
 
 ; Background color for the tray container 
 ; ARGB color (e.g. #f00, #ff992a, #ddff1023)
@@ -478,8 +478,6 @@ tray-scale = 1.0
 ; Fixes the issue where the bar is being drawn
 ; on top of fullscreen window's
 ;
-; Currently supported WM's:
-;   bspwm
 ;   i3 (requires: `override-redirect = true`)
 override-redirect = false
 ; wm-restack = i3
