--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -133,6 +133,8 @@ module-margin-right = 1
 ;   font-3 = FontAwesome:size=10
 ; See the Fonts wiki page for more details
 
+
+;font-0 = "Scientifica:size=10;2"
 font-0 = "NotoSans-Regular:size=8;2"
 font-1 = "waffle:size=12;2"
 
