--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -1,11 +1,11 @@
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 ;;
-;;	    ____        __      __              
+;;	    ____        __      __
 ;;	   / __ \____  / /_  __/ /_  ____ ______
 ;;	  / /_/ / __ \/ / / / / __ \/ __ `/ ___/
-;;	 / ____/ /_/ / / /_/ / /_/ / /_/ / /    
-;;	/_/    \____/_/\__, /_.___/\__,_/_/     
-;;	              /____/                    
+;;	 / ____/ /_/ / / /_/ / /_/ / /_/ / /
+;;	/_/    \____/_/\__, /_.___/\__,_/_/
+;;	              /____/
 ;;
 ;; Created By Aditya Shakya @adi1090x
 ;;
@@ -70,7 +70,7 @@ height = 28
 
 ; Offset defined as pixel value (e.g. 35) or percentage (e.g. 50%)
 ; the percentage can optionally be extended with a pixel offset like so:
-; 50%:-10, this will result in an offset in the x or y direction 
+; 50%:-10, this will result in an offset in the x or y direction
 ; of 50% minus 10 pixels
 offset-x = 0
 offset-y = 0
@@ -83,10 +83,10 @@ foreground = ${color.fg}
 
 ; Background gradient (vertical steps)
 ;   background-[0-9]+ = #aarrggbb
-;;background-0 = 
+;;background-0 =
 
 ; Value used for drawing rounded corners
-; Note: This shouldn't be used together with border-size because the border 
+; Note: This shouldn't be used together with border-size because the border
 ; doesn't get rounded
 ; Individual top/bottom values can be defined using:
 ;   radius-{top,bottom}
@@ -135,8 +135,9 @@ module-margin-right = 1
 
 
 ;font-0 = "Scientifica:size=10;2"
-font-0 = "NotoSans-Regular:size=8;2"
-font-1 = "waffle:size=12;2"
+font-0 = "Ubuntu Condensed:style=Regular:size=10;2"
+;font-0 = "Ligconsolata:size=8;2"
+font-1 = "Waffle:size=12;2"
 
 ; Modules are added to one of the available blocks
 ;   modules-left = cpu ram
@@ -152,19 +153,19 @@ font-1 = "waffle:size=12;2"
 ;menu-apps mpd wired-network
 ;wireless-network network pulseaudio
 ;name_you_want temperature my-text-label
-;backlight keyboard title workspaces 
+;backlight keyboard title workspaces
 ;;
 ;; User modules
 ;checknetwork updates window_switch launcher powermenu sysmenu menu
 ;;
 ;; Bars
-;cpu_bar memory_bar filesystem_bar mpd_bar 
-;volume brightness battery_bar 
+;cpu_bar memory_bar filesystem_bar mpd_bar
+;volume brightness battery_bar
 
 modules-left = launcher i3 sep2 filesystem memory_bar cpu_bar
 modules-center = title sep date
 ; modules-right = spotify sep style sep battery network sep volume brightness sysmenu
-modules-right = spotify sep dualdisplay battery network sep volume brightness
+modules-right = spotify sep battery network sep dualdisplay volume brightness
 
 ; The separator will be inserted between the output of each module
 separator =
@@ -184,7 +185,7 @@ wm-name = i3wm
 
 ; Locale used to localize various module data (e.g. date)
 ; Expects a valid libc locale, for example: sv_SE.UTF-8
-locale = 
+locale =
 
 ; Position of the system tray window
 ; If empty or undefined, tray support will be disabled
@@ -210,7 +211,7 @@ tray-maxsize = 16
 ; background color is defined using `tray-background`
 #tray-transparent = false
 
-; Background color for the tray container 
+; Background color for the tray container
 ; ARGB color (e.g. #f00, #ff992a, #ddff1023)
 ; By default the tray container will use the bar
 ; background color.
@@ -240,7 +241,7 @@ override-redirect = false
 
 ; Set a DPI values used when rendering text
 ; This only affects scalable fonts
-; dpi = 
+;dpi = 120
 
 ; Enable support for inter-process messaging
 ; See the Messaging wiki page for more details.
@@ -248,8 +249,8 @@ enable-ipc = true
 
 ; Fallback click handlers that will be called if
 ; there's no matching module handler found.
-; click-left = 
-; click-middle = 
+; click-left =
+; click-middle =
 ; click-right =
 ; scroll-up =
 ; scroll-down =
@@ -262,8 +263,8 @@ enable-ipc = true
 ; - default   : The default pointer as before, can also be an empty string (default)
 ; - pointer   : Typically in the form of a hand
 ; - ns-resize : Up and down arrows, can be used to indicate scrolling
-cursor-click = 
-cursor-scroll = 
+cursor-click =
+cursor-scroll =
 
 ;; WM Workspace Specific
 
@@ -320,7 +321,7 @@ height = 28
 
 ; Offset defined as pixel value (e.g. 35) or percentage (e.g. 50%)
 ; the percentage can optionally be extended with a pixel offset like so:
-; 50%:-10, this will result in an offset in the x or y direction 
+; 50%:-10, this will result in an offset in the x or y direction
 ; of 50% minus 10 pixels
 offset-x = 0
 offset-y = 0
@@ -333,10 +334,10 @@ foreground = ${color.fg}
 
 ; Background gradient (vertical steps)
 ;   background-[0-9]+ = #aarrggbb
-;;background-0 = 
+;;background-0 =
 
 ; Value used for drawing rounded corners
-; Note: This shouldn't be used together with border-size because the border 
+; Note: This shouldn't be used together with border-size because the border
 ; doesn't get rounded
 ; Individual top/bottom values can be defined using:
 ;   radius-{top,bottom}
@@ -400,19 +401,19 @@ font-1 = "waffle:size=12;2"
 ;menu-apps mpd wired-network
 ;wireless-network network pulseaudio
 ;name_you_want temperature my-text-label
-;backlight keyboard title workspaces 
+;backlight keyboard title workspaces
 ;;
 ;; User modules
 ;checknetwork updates window_switch launcher powermenu sysmenu menu
 ;;
 ;; Bars
-;cpu_bar memory_bar filesystem_bar mpd_bar 
-;volume brightness battery_bar 
+;cpu_bar memory_bar filesystem_bar mpd_bar
+;volume brightness battery_bar
 
 modules-left = i3
 modules-center = title
 ; modules-right = spotify sep style sep battery network sep volume brightness sysmenu
-modules-right = 
+modules-right =
 
 ; The separator will be inserted between the output of each module
 separator =
@@ -432,7 +433,7 @@ wm-name = i3wm
 
 ; Locale used to localize various module data (e.g. date)
 ; Expects a valid libc locale, for example: sv_SE.UTF-8
-locale = 
+locale =
 
 ; Position of the system tray window
 ; If empty or undefined, tray support will be disabled
@@ -458,7 +459,7 @@ tray-maxsize = 16
 ; background color is defined using `tray-background`
 #tray-transparent = false
 
-; Background color for the tray container 
+; Background color for the tray container
 ; ARGB color (e.g. #f00, #ff992a, #ddff1023)
 ; By default the tray container will use the bar
 ; background color.
@@ -486,7 +487,7 @@ override-redirect = false
 
 ; Set a DPI values used when rendering text
 ; This only affects scalable fonts
-; dpi = 
+; dpi =
 
 ; Enable support for inter-process messaging
 ; See the Messaging wiki page for more details.
@@ -494,8 +495,8 @@ enable-ipc = true
 
 ; Fallback click handlers that will be called if
 ; there's no matching module handler found.
-; click-left = 
-; click-middle = 
+; click-left =
+; click-middle =
 ; click-right =
 ; scroll-up =
 ; scroll-down =
@@ -508,8 +509,8 @@ enable-ipc = true
 ; - default   : The default pointer as before, can also be an empty string (default)
 ; - pointer   : Typically in the form of a hand
 ; - ns-resize : Up and down arrows, can be used to indicate scrolling
-cursor-click = 
-cursor-scroll = 
+cursor-click =
+cursor-scroll =
 
 ;; WM Workspace Specific
 
@@ -560,8 +561,8 @@ compositing-underline = over
 compositing-border = over
 
 ; Define fallback values used by all module formats
-format-foreground = 
-format-background = 
+format-foreground =
+format-background =
 format-underline =
 format-overline =
 format-spacing =
@@ -576,8 +577,8 @@ pseudo-transparency = false
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 ;;	    __________  ______
 ;;	   / ____/ __ \/ ____/
-;;	  / __/ / / / / /_    
-;;	 / /___/ /_/ / __/    
-;;	/_____/\____/_/       
+;;	  / __/ / / / / /_
+;;	 / /___/ /_/ / __/
+;;	/_____/\____/_/
 ;;
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
