--- a/.config/polybar/user_modules.ini
+++ b/.config/polybar/user_modules.ini
@@ -1,18 +1,18 @@
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 ;;
-;;	   __  __                  __  ___          __      __         
+;;	   __  __                  __  ___          __      __
 ;;	  / / / /_______  _____   /  |/  /___  ____/ /_  __/ /__  _____
 ;;	 / / / / ___/ _ \/ ___/  / /|_/ / __ \/ __  / / / / / _ \/ ___/
-;;	/ /_/ (__  )  __/ /     / /  / / /_/ / /_/ / /_/ / /  __(__  ) 
-;;	\____/____/\___/_/     /_/  /_/\____/\__,_/\__,_/_/\___/____/  
-;; 
+;;	/ /_/ (__  )  __/ /     / /  / / /_/ / /_/ / /_/ / /  __(__  )
+;;	\____/____/\___/_/     /_/  /_/\____/\__,_/\__,_/_/\___/____/
+;;
 ;; Created By Aditya Shakya @adi1090x
 ;;
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
 [module/dualdisplay]
 type = custom/text
-content = dual
+content = 
 click-left = ~/.config/polybar/scripts/dual_display.sh &
 
 [module/checknetwork]
@@ -239,7 +239,7 @@ menu-2-1-exec = menu-open-0
 
 ;;format = <label-toggle> <menu>
 ;;format-prefix = ${menu.icon-menu}
-format-spacing = 1 
+format-spacing = 1
 
 label-open = 
 label-close = 
@@ -286,7 +286,7 @@ menu-0-3-exec = firefox &
 
 ;;format = <label-toggle> <menu>
 ;;format-prefix = ${menu.icon-menu}
-format-spacing = 1 
+format-spacing = 1
 
 label-open = 
 label-close = 
@@ -356,8 +356,8 @@ exec = python ~/.config/polybar/scripts/spotify_status.py -p ',' -f '{play
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 ;;	    __________  ______
 ;;	   / ____/ __ \/ ____/
-;;	  / __/ / / / / /_    
-;;	 / /___/ /_/ / __/    
-;;	/_____/\____/_/       
+;;	  / __/ / / / / /_
+;;	 / /___/ /_/ / __/
+;;	/_____/\____/_/
 ;;
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
