Use neovim nightly

--- a/.i3/config
+++ b/.i3/config
@@ -37,6 +37,7 @@ bindsym $mod+Shift+q kill
 # bindsym $mod+d exec --no-startup-id dmenu_recency
 #bindsym $mod+d exec --no-startup-id rofi -no-lazy-grab -modi drun -show drun -theme ~/.config/polybar/scripts/themes/slate.rasi
 bindsym $mod+d exec --no-startup-id rofi -no-lazy-grab -modi drun -show
+bindsym $mod+Tab exec --no-startup-id rofi -no-lazy-grab -modi window -show
 
 # launch categorized menu
 bindsym $mod+z exec --no-startup-id morc_menu
@@ -285,8 +286,8 @@ bindsym $mod+9 exec --no-startup-id blurlock
 
 # Autostart applications
 exec --no-startup-id /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
-#exec --no-startup-id nitrogen --restore; sleep 1; picom -b
-exec --no-startup-id nitrogen --restore
+exec --no-startup-id nitrogen --restore; sleep 1; picom -b
+#exec --no-startup-id nitrogen --restore
 #exec --no-startup-id manjaro-hello
 exec --no-startup-id nm-applet
 exec --no-startup-id xfce4-power-manager
