--- a/.config/kitty/themes/gruvbox_dark_hard.conf
+++ b/.config/kitty/themes/gruvbox_dark_hard.conf
@@ -1,5 +1,4 @@
 include ~/.config/kitty/themes/gruvbox_dark.conf
 
-# background  #1d2021
-background #1c1c1c
+background  #1d2021
 color0      #1d2021
