--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1088,7 +1088,7 @@ map kitty_mod+h         show_scrollback
 #: Window management {{{
 
 #map kitty_mod+enter new_window
-map kitty_mod+enter launch --cwd=current
+map kitty_mod+n launch --cwd=current
 
 #: You can open a new window running an arbitrary program, for
 #: example::
@@ -1115,7 +1115,8 @@ map kitty_mod+enter launch --cwd=current
 
 #: For more details, see launch.
 
-map kitty_mod+n new_os_window
+#map kitty_mod+n new_os_window
+map kitty_mod+enter new_os_window_with_cwd
 
 #: Works like new_window above, except that it opens a top level OS
 #: kitty window. In particular you can use new_os_window_with_cwd to
@@ -1144,7 +1145,8 @@ map kitty_mod+0 tenth_window
 
 map kitty_mod+right next_tab
 map kitty_mod+left  previous_tab
-map kitty_mod+t     new_tab
+#map kitty_mod+t     new_tab
+map kitty_mod+t new_tab_with_cwd
 map kitty_mod+q     close_tab
 map kitty_mod+.     move_tab_forward
 map kitty_mod+,     move_tab_backward
