--- a/.config/polybar/user_modules.ini
+++ b/.config/polybar/user_modules.ini
@@ -13,7 +13,7 @@
 [module/dualdisplay]
 type = custom/text
 content = 
-click-left = ~/.config/polybar/scripts/dual_display.sh &
+click-left = ~/scripts/dual_display.sh &
 
 [module/checknetwork]
 type = custom/script
