--- a/.config/vis/config
+++ b/.config/vis/config
@@ -11,7 +11,7 @@
 #audio.pulse.source=0
 
 ##Defaults to "/tmp/mpd.fifo"
-#mpd.fifo.path=/tmp/mpd.fifo
+mpd.fifo.path=/tmp/mpd.fifo
 
 ##If set to false the visualizers will use mono mode instead of stereo. Some visualizers will
 ##behave differently when mono is enabled. For example, spectrum show two sets of bars.
