Add gruvbox to polybar

--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -6,7 +6,10 @@
     "python",
     "css",
     "markdown",
-    "yaml"
+    "yaml",
+    "sql",
+    "html",
+    "c"
   ],
   "prettier.singleQuote": true,
   "prettier.semi": true,
