--- a/.config/polybar/primary.ini
+++ b/.config/polybar/primary.ini
@@ -1,7 +1,5 @@
-[bar/secondary]
-monitor = ${env:MONITOR:HDMI1}
-;monitor = ${env:MONITOR:}
-
+[bar/primary]
+;monitor = ${env:MONITOR:HDMI-1}
 width = 100%
 height = 27
 ;offset-x = 1%
@@ -30,9 +28,9 @@ font-1 = fixed:pixelsize=10;1
 font-2 = "Wuncon Siji:style=Regular:size=10;2"
 font-3 = "waffle:style=Regular:size=10;2"
 
-modules-left = i3
+modules-left = dualdisplay i3 filesystem memory cpu
 modules-center = xwindow
-modules-right =
+modules-right = mpd xbacklight volume wlan eth battery date
 
 tray-position = right
 tray-padding = 2
