--- a/.i3/config
+++ b/.i3/config
@@ -35,8 +35,7 @@ bindsym $mod+Shift+q kill
 
 # start program launcher
 # bindsym $mod+d exec --no-startup-id dmenu_recency
-#bindsym $mod+d exec --no-startup-id rofi -no-lazy-grab -modi drun -show drun -theme ~/.config/polybar/scripts/themes/slate.rasi
-bindsym $mod+d exec --no-startup-id rofi -no-lazy-grab -modi drun -show
+bindsym $mod+d exec --no-startup-id rofi -no-lazy-grab -combi-modi drun -show
 bindsym $mod+Tab exec --no-startup-id rofi -no-lazy-grab -modi window -show
 
 # launch categorized menu
@@ -57,6 +56,12 @@ bindsym $mod+Ctrl+m exec pavucontrol
 # Screen brightness controls
 # bindsym XF86MonBrightnessUp exec "xbacklight -inc 10; notify-send 'brightness up'"
 # bindsym XF86MonBrightnessDown exec "xbacklight -dec 10; notify-send 'brightness down'"
+
+# Media controls
+bindsym XF86AudioPrev exec $HOME/.local/bin/song_control prev
+bindsym XF86AudioPause exec $HOME/.local/bin/song_control pause
+bindsym XF86AudioPlay exec $HOME/.local/bin/song_control play
+bindsym XF86AudioNext exec $HOME/.local/bin/song_control next
 
 # Start Applications
 bindsym $mod+Ctrl+b exec kitty -e 'bmenu'
@@ -286,8 +291,9 @@ bindsym $mod+9 exec --no-startup-id blurlock
 
 # Autostart applications
 exec --no-startup-id /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
+
+exec --no-startup-id nitrogen --save --set-zoom-fill $HOME/wallpapers/hermione_granger.jpeg
 exec --no-startup-id nitrogen --restore; sleep 1; picom -b
-#exec --no-startup-id nitrogen --restore
 #exec --no-startup-id manjaro-hello
 exec --no-startup-id nm-applet
 exec --no-startup-id xfce4-power-manager
@@ -308,8 +314,6 @@ exec --no-startup-id libinput-gestures-setup start
 exec --no-startup-id xinput set-prop 14 315 1
 
 exec_always --no-startup-id $HOME/.config/polybar/launch.sh
-
-#exec --no-startup-id nitrogen --save --set-zoom-fill $HOME/.i3/wallpapers/snow.jpg
 
 # Color palette used for the terminal ( ~/.Xresources file )
 # Colors are gathered based on the documentation:
@@ -374,7 +378,7 @@ set_from_resource $term_color15    color15
 #}
 
 # hide/unhide i3status bar
-bindsym $mod+m bar mode toggle
+#bindsym $mod+m bar mode toggle
 
 # Theme colors
 # class                   border  backgr. text    indic.   child_border
@@ -443,4 +447,4 @@ mode "$mode_gaps_outer" {
         bindsym Escape mode "default"
 }
 
-bindsym $mod+Ctrl+r exec rofimoji
+bindsym $mod+Ctrl+e exec rofimoji -p
