Change i3 theme colors

--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -31,7 +31,7 @@ fixed-values = true
 ;label-mounted = %{F#0a81f5}%mountpoint%%{F-}: %percentage_used%%
 
 format-mounted = <label-mounted>
-format-mounted-prefix = 
+format-mounted-prefix = 
 ;label-mounted = " %used%/%total%"
 label-mounted = " %free%"
 
@@ -62,6 +62,14 @@ label-empty-padding = 2
 
 [module/i3]
 type = internal/i3
+
+; ws-icon-0 = 1;♚
+; ws-icon-1 = 2;♛
+; ws-icon-2 = 3;♜
+; ws-icon-3 = 4;♝
+; ws-icon-4 = 5;♞
+; ws-icon-default = ♟
+
 format = <label-state> <label-mode>
 index-sort = true
 wrapping-scroll = false
@@ -71,27 +79,28 @@ wrapping-scroll = false
 
 label-mode-padding = 1
 label-mode-foreground = ${colors.red}
-label-mode-background = ${colors.bg-normal}
+label-mode-background = ${colors.bg-hard}
 
 ; focused = Active workspace on focused monitor
-label-focused = %index%
-label-focused-background = ${colors.bg-normal}
+label-focused = %name%
+label-focused-background = ${colors.bg-hard}
 label-focused-underline= ${colors.cyan}
 label-focused-padding = 1
 
 ; unfocused = Inactive workspace on any monitor
-label-unfocused = %index%
+label-unfocused = %name%
 label-unfocused-padding = 1
 
 ; visible = Active workspace on unfocused monitor
-label-visible = %index%
+label-visible = %name%
 label-visible-background = ${self.label-focused-background}
 label-visible-underline = ${self.label-focused-underline}
 label-visible-padding = ${self.label-focused-padding}
 
 ; urgent = Workspace with urgency hint set
-label-urgent = %index%
-label-urgent-background = ${colors.red}
+label-urgent = %name%
+label-urgent-background = ${self.label-mode-background}
+label-urgent-underline = ${colors.red}
 label-urgent-padding = 1
 
 ; Separator in between workspaces
@@ -178,7 +187,7 @@ card = intel_backlight
 
 [module/cpu]
 type = internal/cpu
-interval = 1
+interval = 2
 format-prefix = " "
 format-prefix-foreground = ${colors.fg}
 ;format-underline = #f90000
@@ -186,7 +195,7 @@ label = %percentage:2%%
 
 [module/memory]
 type = internal/memory
-interval = 1
+interval = 2
 ;format-prefix = " "
 format-prefix = " "
 format-prefix-foreground = ${colors.fg}
@@ -239,7 +248,7 @@ interval = 1
 date =
 date-alt = " %Y-%m-%d %A"
 
-time = %H:%M %p
+time = %I:%M %p
 time-alt = %H:%M:%S
 
 format-prefix = 
@@ -415,13 +424,15 @@ format-discharging = <ramp-capacity> <label-discharging>
 ;format-discharging-underline = ${self.format-charging-underline}
 
 format-full-prefix = " "
-format-full-prefix-foreground = ${colors.red}
+format-full-prefix-foreground = ${colors.green}
 ;format-full-underline = ${self.format-charging-underline}
 
 ramp-capacity-0 = 
 ramp-capacity-1 = 
 ramp-capacity-2 = 
-ramp-capacity-foreground = ${colors.fg}
+ramp-capacity-0-foreground = ${colors.red}
+ramp-capacity-1-foreground = ${colors.yellow}
+ramp-capacity-2-foreground = ${colors.fg}
 
 animation-charging-0 = 
 animation-charging-1 = 
