--- a/.config/polybar/primary.ini
+++ b/.config/polybar/primary.ini
@@ -1,13 +1,13 @@
 [bar/primary]
 ;monitor = ${env:MONITOR:HDMI-1}
 width = 100%
-height = 27
+height = 28
 ;offset-x = 1%
 ;offset-y = 1%
 radius = 0
 fixed-center = false
 
-background = ${colors.bg-normal}
+background = ${colors.bg-hard}
 foreground = ${colors.fg}
 
 line-size = 2
