--- a/.config/polybar/secondary.ini
+++ b/.config/polybar/secondary.ini
@@ -9,7 +9,7 @@ height = 27
 radius = 0
 fixed-center = false
 
-background = ${colors.bg-normal}
+background = ${colors.bg-hard}
 foreground = ${colors.fg}
 
 line-size = 2
