--- a/.i3/config
+++ b/.i3/config
@@ -21,7 +21,8 @@ bindsym $mod+n border normal
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font xft:JetBrainsMono Nerd Font 10
+# font xft:JetBrainsMono Nerd Font 10
+font -misc-tamsyn-medium-r-normal-*-14-*-*-*-*-*-*-*
 
 # Use Mouse+$mod to drag floating windows
 floating_modifier $mod
@@ -152,15 +153,15 @@ bindsym $mod+Ctrl+Left workspace prev
 # to display names or symbols instead of plain workspace numbers you can use
 # something like: set $ws1 1:mail
 #                 set $ws2 2:
-set $ws1 1
-set $ws2 2
-set $ws3 3
-set $ws4 4
+set $ws1 1 
+set $ws2 2 
+set $ws3 3 
+set $ws4 4 
 set $ws5 5
 set $ws6 6
 set $ws7 7
 set $ws8 8
-set $ws0 0
+set $ws0 0 
 
 # switch to workspace
 bindsym $mod+1 workspace $ws1
@@ -194,10 +195,12 @@ bindsym $mod+Shift+7 move container to workspace $ws7; workspace $ws7
 bindsym $mod+Shift+8 move container to workspace $ws8; workspace $ws8
 
 # Open applications on specific workspaces
+assign [class="telegram-desktop"] $ws0
+assign [class="discord"] $ws0
+assign [class="google-chrome"] $ws1
 assign [class="Code"] $ws2
-assign [class="Google Chrome"] $ws1
-# assign [class="Pcmanfm"] $ws3
-# assign [class="Skype"] $ws5
+assign [class="pcmanfm"] $ws3
+assign [class="spotify"] $ws4
 
 # Open specific applications in floating mode
 for_window [title="alsamixer"] floating enable
@@ -228,7 +231,6 @@ for_window [class="Timeset-gui"] floating enable
 for_window [class="(?i)virtualbox"] floating enable
 for_window [class="Xfburn"] floating enable
 
-for_window [class="Telegram"] floating enable sticky enable
 for_window [class="kitty"] floating enable sticky enable
 
 # switch to workspace with urgent window automatically
@@ -292,7 +294,8 @@ bindsym $mod+9 exec --no-startup-id blurlock
 # Autostart applications
 exec --no-startup-id /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 
-exec --no-startup-id nitrogen --save --set-zoom-fill $HOME/wallpapers/hermione_granger.jpeg
+#exec --no-startup-id nitrogen --save --set-zoom-fill $HOME/wallpapers/hermione_granger.jpeg
+exec --no-startup-id nitrogen --save --set-zoom-fill $HOME/wallpapers/enindu-pacman.png
 exec --no-startup-id nitrogen --restore; sleep 1; picom -b
 #exec --no-startup-id manjaro-hello
 exec --no-startup-id nm-applet
@@ -381,14 +384,13 @@ set_from_resource $term_color15    color15
 #bindsym $mod+m bar mode toggle
 
 # Theme colors
-# class                   border  backgr. text    indic.   child_border
-  client.focused          #556064 #556064 #80FFF9 #FDF6E3
-  client.focused_inactive #2F3D44 #2F3D44 #1ABC9C #454948
-  client.unfocused        #2F3D44 #2F3D44 #1ABC9C #454948
-  client.urgent           #CB4B16 #FDF6E3 #1ABC9C #268BD2
-  client.placeholder      #000000 #0c0c0c #ffffff #000000
-
-  client.background       #2B2C2B
+# class                   border        backgr.           text              indic.          child_border
+  client.focused          $term_color12 $term_color12 $term_background $term_color1 $term_color12
+  client.focused_inactive $term_color0 $term_color0 $term_foreground $term_color1 $term_color0
+  client.unfocused        $term_color0 $term_color0 $term_foreground $term_color1 $term_color0
+  client.urgent           $term_color9 $term_color9 $term_background $term_color1 $term_color9
+  client.placeholder      $term_color12 $term_color12 $term_background $term_color1 $term_color12
+  client.background       $term_color12 $term_color12 $term_background $term_color1 $term_color12
 
 #############################
 ### settings for i3-gaps: ###
