--- a/.i3/config
+++ b/.i3/config
@@ -195,11 +195,11 @@ bindsym $mod+Shift+7 move container to workspace $ws7; workspace $ws7
 bindsym $mod+Shift+8 move container to workspace $ws8; workspace $ws8
 
 # Open applications on specific workspaces
-assign [class="telegram-desktop"] $ws0
+assign [class="TelegramDesktop"] $ws0
 assign [class="discord"] $ws0
 assign [class="google-chrome"] $ws1
 assign [class="Code"] $ws2
-assign [class="pcmanfm"] $ws3
+assign [class="Pcmanfm"] $ws3
 assign [class="spotify"] $ws4
 
 # Open specific applications in floating mode
