--- a/.i3/config
+++ b/.i3/config
@@ -81,6 +81,7 @@ bindsym $mod+Print --release exec --no-startup-id i3-scrot -w
 bindsym $mod+Shift+Print --release exec --no-startup-id i3-scrot -s
 bindsym $mod+Shift+h exec xdg-open /usr/share/doc/manjaro/i3_help.pdf
 bindsym $mod+Ctrl+x --release exec --no-startup-id xkill
+bindsym $mod+Ctrl+e exec rofimoji
 
 # focus_follows_mouse no
 
@@ -295,7 +296,6 @@ bindsym $mod+9 exec --no-startup-id blurlock
 exec --no-startup-id /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 
 #exec --no-startup-id nitrogen --save --set-zoom-fill $HOME/wallpapers/hermione_granger.jpeg
-exec --no-startup-id nitrogen --save --set-zoom-fill $HOME/wallpapers/enindu-pacman.png
 exec --no-startup-id nitrogen --restore; sleep 1; picom -b
 #exec --no-startup-id manjaro-hello
 exec --no-startup-id nm-applet
@@ -449,4 +449,3 @@ mode "$mode_gaps_outer" {
         bindsym Escape mode "default"
 }
 
-bindsym $mod+Ctrl+e exec rofimoji -p
