--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -41,21 +41,38 @@ label-unmounted-foreground = ${colors.fg}
 [module/bspwm]
 type = internal/bspwm
 
-label-focused = %index%
-label-focused-background = ${colors.background-alt}
-label-focused-underline= ${colors.primary}
-label-focused-padding = 2
+format = <label-state> <label-mode>
+index-sort = true
+wrapping-scroll = false
 
-label-occupied = %index%
-label-occupied-padding = 2
+; Only show workspaces on the same output as the bar
+;pin-workspaces = true
 
-label-urgent = %index%!
-label-urgent-background = ${colors.alert}
-label-urgent-padding = 2
+label-empty =
 
-label-empty = %index%
-label-empty-foreground = ${colors.foreground-alt}
-label-empty-padding = 2
+label-mode-padding = 1
+label-mode-foreground = ${colors.red}
+label-mode-background = ${colors.bg-hard}
+
+; focused = Active workspace on focused monitor
+label-focused = %name%
+label-focused-background = ${colors.bg-hard}
+label-focused-underline= ${colors.cyan}
+label-focused-padding = 1
+
+; Available tokens:
+;   %name%
+;   %icon%
+;   %index%
+; Default: %icon%  %name%
+label-occupied = %name%
+label-occupied-padding = 1
+
+; urgent = Workspace with urgency hint set
+label-urgent = %name%
+label-urgent-background = ${self.label-mode-background}
+label-urgent-underline = ${colors.red}
+label-urgent-padding = 1
 
 ; Separator in between workspaces
 ; label-separator = |
