--- a/.config/polybar/primary.ini
+++ b/.config/polybar/primary.ini
@@ -28,7 +28,8 @@ font-1 = fixed:pixelsize=10;1
 font-2 = "Wuncon Siji:style=Regular:size=10;2"
 font-3 = "waffle:style=Regular:size=10;2"
 
-modules-left = dualdisplay i3 filesystem memory cpu
+; modules-left = dualdisplay i3 filesystem memory cpu
+modules-left = dualdisplay bspwm filesystem memory cpu
 modules-center = xwindow
 modules-right = mpd xbacklight volume wlan eth battery date
 
@@ -36,16 +37,16 @@ tray-position = right
 tray-padding = 2
 ;tray-background = #0063ff
 
-;wm-restack = bspwm
+; wm-restack = bspwm
 ;wm-restack = i3
 
 ;override-redirect = true
 
-;scroll-up = bspwm-desknext
-;scroll-down = bspwm-deskprev
+scroll-up = bspwm-desknext
+scroll-down = bspwm-deskprev
 
-scroll-up = #i3.next
-scroll-down = #i3.prev
+; scroll-up = #i3.next
+; scroll-down = #i3.prev
 
 cursor-click = pointer
 ;cursor-scroll = ns-resize
