--- a/.config/polybar/secondary.ini
+++ b/.config/polybar/secondary.ini
@@ -30,7 +30,8 @@ font-1 = fixed:pixelsize=10;1
 font-2 = "Wuncon Siji:style=Regular:size=10;2"
 font-3 = "waffle:style=Regular:size=10;2"
 
-modules-left = i3
+modules-left = bspwm
+; modules-left = i3
 modules-center = xwindow
 modules-right =
 
@@ -43,13 +44,14 @@ tray-padding = 2
 
 ;override-redirect = true
 
-;scroll-up = bspwm-desknext
-;scroll-down = bspwm-deskprev
+scroll-up = bspwm-desknext
+scroll-down = bspwm-deskprev
 
-scroll-up = #i3.next
-scroll-down = #i3.prev
+; scroll-up = #i3.next
+; scroll-down = #i3.prev
 
 cursor-click = pointer
 ;cursor-scroll = ns-resize
 cursor-scroll = default
+
 
