--- a/.config/libinput-gestures.conf
+++ b/.config/libinput-gestures.conf
@@ -54,7 +54,8 @@
 # also add "-w" to the internal command to allow wrapping workspaces.
 
 # Move to next workspace (works for GNOME/KDE/etc on Wayland and Xorg)
-gesture swipe left	_internal ws_up
+# gesture swipe left 3 _internal ws_up
+gesture swipe left 3 xdotool key super+0x005d
 
 # NOTE ABOUT FINGER COUNT:
 # The above command will configure this command for all fingers (i.e. 3
@@ -67,7 +68,8 @@ gesture swipe left	_internal ws_up
 # gesture swipe up	xdotool key super+Page_Down
 
 # Move to prev workspace (works for GNOME/KDE/etc on Wayland and Xorg)
-gesture swipe right	_internal ws_down
+# gesture swipe right	_internal ws_down
+gesture swipe right 3 xdotool key super+0x005b
 # gesture swipe down	xdotool key super+Page_Up
 
 # Browser go forward (works only for Xorg, and Xwayland clients)
