--- a/.i3/config
+++ b/.i3/config
@@ -48,7 +48,7 @@ bindsym $mod+z exec --no-startup-id morc_menu
 
 exec --no-startup-id volumeicon
 #bindsym $mod+Ctrl+m exec terminal -e 'alsamixer'
-exec --no-startup-id pulseaudio
+# exec --no-startup-id pulseaudio
 #exec --no-startup-id pa-applet
 bindsym $mod+Ctrl+m exec pavucontrol
 
@@ -198,10 +198,10 @@ bindsym $mod+Shift+8 move container to workspace $ws8; workspace $ws8
 # Open applications on specific workspaces
 assign [class="TelegramDesktop"] $ws0
 assign [class="discord"] $ws0
-assign [class="google-chrome"] $ws1
-assign [class="Code"] $ws2
-assign [class="Pcmanfm"] $ws3
-assign [class="spotify"] $ws4
+# assign [class="google-chrome"] $ws1
+# assign [class="Code"] $ws2
+# assign [class="Pcmanfm"] $ws3
+# assign [class="spotify"] $ws4
 
 # Open specific applications in floating mode
 for_window [title="alsamixer"] floating enable
