Update key mappings and settings

--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -11,7 +11,10 @@
     "markdown",
     "yaml",
     "sql",
-    "html"
+    "html",
+    "ts",
+    "jsx",
+    "tsx"
   ],
   "prettier.singleQuote": true,
   "prettier.semi": true,
