--- a/.editorconfig
+++ b/.editorconfig
@@ -1,3 +1,4 @@
+# top-most EditorConfig file
 root = true
 
 [*]
@@ -5,16 +6,22 @@ end_of_line = lf
 charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = true
-indent_style = space
-indent_size = 2
+indent_style = tab
 
 [*.txt]
 indent_style = tab
 indent_size = 4
 
 [*.py]
+indent_style = space
 indent_size = 4
+
+[*.{js,ts,jsx,tsx,json}]
+indent_style = space
+indent_size = 2
 
 [*.{diff,md}]
 trim_trailing_whitespace = false
 
+[*.{config}]
+indent_size = 2
