--- a/.config/i3/config
+++ b/.config/i3/config
@@ -295,7 +295,7 @@ bindsym $mod+9 exec --no-startup-id blurlock
 # Autostart applications
 exec --no-startup-id /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 
-#exec --no-startup-id nitrogen --save --set-zoom-fill $HOME/wallpapers/hermione_granger.jpeg
+exec --no-startup-id nitrogen --save --set-zoom-fill $HOME/wallpapers/landscape-low-poly-minimalist-minimalism.jpg
 exec --no-startup-id nitrogen --restore; sleep 1; picom -b
 #exec --no-startup-id manjaro-hello
 exec --no-startup-id nm-applet
@@ -310,7 +310,7 @@ exec --no-startup-id udiskie
 #exec --no-startup-id conky -c ~/.i3/conky/conky_test
 # exec --no-startup-id xautolock -time 10 -locker blurlock
 exec --no-startup-id $HOME/scripts/autolocker.sh
-exec_always --no-startup-id ff-theme-util
+# exec_always --no-startup-id ff-theme-util
 exec_always --no-startup-id fix_xcursor
 
 exec --no-startup-id libinput-gestures-setup start
@@ -318,6 +318,8 @@ exec --no-startup-id libinput-gestures-setup start
 # enable touchpad natural scrolling
 # exec --no-startup-id xinput set-prop 14 315 1
 exec --no-startup-id xinput set-prop "DLLC6B2:00 06CB:75BF Touchpad" "libinput Natural Scrolling Enabled" 1
+
+exec_always --no-startup-id fc-cache -f
 
 exec_always --no-startup-id $HOME/.config/polybar/launch.sh
 
