--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -1,4 +1,5 @@
 [module/sep]
+
 type = custom/text
 content = |
 ;;content-background = #000
@@ -226,7 +227,7 @@ interval = 3.0
 
 format-connected = <ramp-signal> <label-connected>
 ;format-connected-underline = #9f78e1
-label-connected = %essid%  %downspeed%
+label-connected = %essid%  %upspeed%  %downspeed%
 
 ;format-disconnected =
 format-disconnected =  <label-disconnected>
