--- a/.config/starship.toml
+++ b/.config/starship.toml
@@ -11,7 +11,7 @@ disabled = false
 
 [battery]
 full_symbol = "🔋"
-# charging_symbol = "⚡️"
+charging_symbol = "⚡️"
 # discharging_symbol = "💀"
 
 [[battery.display]]  # "bold red" style when capacity is between 0% and 10%
