--- a/.config/i3/config
+++ b/.config/i3/config
@@ -250,20 +250,28 @@ bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcu
 bindsym $mod+Escape mode "$mode_system"
 set $mode_system (l)ock, (e)xit, switch_(u)ser, (s)uspend, (h)ibernate, (r)eboot, (Shift+s)hutdown
 mode "$mode_system" {
-    bindsym l exec --no-startup-id i3exit lock, mode "default"
-    bindsym s exec --no-startup-id i3exit suspend, mode "default"
-    bindsym u exec --no-startup-id i3exit switch_user, mode "default"
-    bindsym e exec --no-startup-id i3exit logout, mode "default"
-    bindsym h exec --no-startup-id i3exit hibernate, mode "default"
-    bindsym r exec --no-startup-id i3exit reboot, mode "default"
-    bindsym Shift+s exec --no-startup-id i3exit shutdown, mode "default"
-
-    # exit system mode: "Enter" or "Escape"
-    bindsym Return mode "default"
-    bindsym Escape mode "default"
+	# bindsym l exec --no-startup-id i3exit lock, mode "default"
+	# bindsym s exec --no-startup-id i3exit suspend, mode "default"
+	# bindsym u exec --no-startup-id i3exit switch_user, mode "default"
+	# bindsym e exec --no-startup-id i3exit logout, mode "default"
+	# bindsym h exec --no-startup-id i3exit hibernate, mode "default"
+	# bindsym r exec --no-startup-id i3exit reboot, mode "default"
+	# bindsym Shift+s exec --no-startup-id i3exit shutdown, mode "default"
+	bindsym l exec --no-startup-id lexit lock, mode "default"
+	bindsym s exec --no-startup-id lexit suspend, mode "default"
+	bindsym u exec --no-startup-id lexit switch_user, mode "default"
+	bindsym e exec --no-startup-id lexit logout, mode "default"
+	bindsym h exec --no-startup-id lexit hibernate, mode "default"
+	bindsym r exec --no-startup-id lexit reboot, mode "default"
+	bindsym Shift+s exec --no-startup-id lexit shutdown, mode "default"
+	#
+	# exit system mode: "Enter" or "Escape"
+	bindsym Return mode "default"
+	bindsym Escape mode "default"
 }
 
-bindsym $mod+Shift+x exec --no-startup-id i3exit lock, mode "default"
+# Lock screen
+bindsym $mod+Shift+x exec --no-startup-id lexit lock
 
 # Resize window (you can also use the mouse for that)
 bindsym $mod+r mode "resize"
@@ -289,13 +297,11 @@ mode "resize" {
         bindsym Escape mode "default"
 }
 
-# Lock screen
-bindsym $mod+9 exec --no-startup-id blurlock
 
 # Autostart applications
 exec --no-startup-id /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 
-exec --no-startup-id nitrogen --save --set-zoom-fill $HOME/wallpapers/landscape-low-poly-minimalist-minimalism.jpg
+# exec --no-startup-id nitrogen --save --set-zoom-fillHOME/wallpapers/landscape-low-poly-minimalist-minimalism.jpg
 exec --no-startup-id nitrogen --restore; sleep 1; picom -b
 #exec --no-startup-id manjaro-hello
 exec --no-startup-id nm-applet
@@ -309,7 +315,7 @@ exec --no-startup-id udiskie
 #exec --no-startup-id start_conky_green
 #exec --no-startup-id conky -c ~/.i3/conky/conky_test
 # exec --no-startup-id xautolock -time 10 -locker blurlock
-exec --no-startup-id $HOME/scripts/autolocker.sh
+# exec --no-startup-id $HOME/scripts/autolocker.sh
 # exec_always --no-startup-id ff-theme-util
 exec_always --no-startup-id fix_xcursor
 
