--- a/.config/starship.toml
+++ b/.config/starship.toml
@@ -11,11 +11,11 @@ disabled = false
 
 [battery]
 full_symbol = "🔋"
-charging_symbol = "⚡️"
+charging_symbol = "⚡"
 # discharging_symbol = "💀"
 
 [[battery.display]]  # "bold red" style when capacity is between 0% and 10%
-threshold = 10
+threshold = 15
 style = "bold red"
 
 [[battery.display]]  # "bold yellow" style when capacity is between 10% and 30%
@@ -35,4 +35,3 @@ truncation_symbol = ".../"
 
 [git_branch]
 format = "[$symbol$branch]($style) "
-
