--- a/.config/i3/config
+++ b/.config/i3/config
@@ -27,7 +27,7 @@ font -misc-tamsyn-medium-r-normal-*-14-*-*-*-*-*-*-*
 # Use Mouse+$mod to drag floating windows
 floating_modifier $mod
 
-border_radius 8
+# border_radius 8
 
 # start a terminal
 #bindsym $mod+Return exec terminal
@@ -60,6 +60,9 @@ bindsym $mod+Ctrl+m exec pavucontrol
 # bindsym XF86MonBrightnessUp exec "xbacklight -inc 10; notify-send 'brightness up'"
 # bindsym XF86MonBrightnessDown exec "xbacklight -dec 10; notify-send 'brightness down'"
 
+# xfce4-power-manager toggle presentation mode
+bindsym $mod+p exec $HOME/scripts/toggle_presentation_mode
+
 # Media controls
 bindsym XF86AudioPrev exec playerctl previous
 bindsym XF86AudioPause exec playerctl pause
@@ -67,7 +70,7 @@ bindsym XF86AudioPlay exec playerctl play
 bindsym XF86AudioNext exec playerctl next
 
 # Start Applications
-bindsym $mod+Ctrl+b exec kitty -e 'bmenu'
+# bindsym $mod+Ctrl+b exec kitty -e 'bmenu'
 #bindsym $mod+F2 exec palemoon
 #bindsym $mod+F2 exec google-chrome-stable
 bindsym $mod+F3 exec pcmanfm
@@ -81,7 +84,7 @@ bindsym $mod+Shift+d --release exec "killall dunst; exec notify-send 'restart du
 bindsym Print exec --no-startup-id flameshot gui
 bindsym $mod+Print --release exec --no-startup-id i3-scrot -w
 bindsym $mod+Shift+Print --release exec --no-startup-id i3-scrot -s
-bindsym $mod+Shift+h exec xdg-open /usr/share/doc/manjaro/i3_help.pdf
+# bindsym $mod+Shift+h exec xdg-open /usr/share/doc/manjaro/i3_help.pdf
 bindsym $mod+Ctrl+x --release exec --no-startup-id xkill
 bindsym $mod+Ctrl+e exec rofimoji
 
@@ -117,8 +120,8 @@ bindsym $mod+b workspace back_and_forth
 bindsym $mod+Shift+b move container to workspace back_and_forth; workspace back_and_forth
 
 # split orientation
-bindsym $mod+h split h;exec notify-send 'tile horizontally'
-bindsym $mod+v split v;exec notify-send 'tile vertically'
+bindsym $mod+h split h
+bindsym $mod+v split v
 bindsym $mod+q split toggle
 
 # toggle fullscreen mode for the focused container
@@ -234,7 +237,7 @@ for_window [class="Timeset-gui"] floating enable
 for_window [class="(?i)virtualbox"] floating enable
 for_window [class="Xfburn"] floating enable
 
-for_window [class="kitty"] floating enable sticky enable
+# for_window [class="kitty"] floating enable sticky enable
 
 # switch to workspace with urgent window automatically
 for_window [urgent=latest] focus
