--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -248,7 +248,7 @@ mouse_hide_wait 3.0
 #: much effort.
 
 url_color #0087bd
-url_style curly
+url_style single
 
 #: The color and style for highlighting URLs on mouse-over. url_style
 #: can be one of: none, single, double, curly
@@ -403,7 +403,7 @@ command_on_bell none
 
 #: Window layout {{{
 
-remember_window_size  no
+remember_window_size  yes
 initial_window_width  900
 initial_window_height 600
 
@@ -461,7 +461,7 @@ single_window_margin_width -1
 #: values set top, horizontal and bottom. Four values set top, right,
 #: bottom and left.
 
-window_padding_width 0 6
+window_padding_width 0 0
 
 #: The window padding (in pts) (blank area between the text and the
 #: window border). A single value sets all four sides. Two values set
@@ -631,7 +631,7 @@ tab_bar_background none
 
 ##: The foreground and background colors
 
-#background_opacity 1.0
+background_opacity 0.7
 
 ##: The opacity of the background. A number between 0 and 1, where 1 is
 ##: opaque and 0 is fully transparent.  This will only work if
@@ -647,7 +647,7 @@ tab_bar_background none
 ##: codes to set the terminals default colors in a shell script to
 ##: launch your editor.  Be aware that using a value less than 1.0 is a
 ##: (possibly significant) performance hit.  If you want to dynamically
-##: change transparency of windows set dynamic_background_opacity to
+##: change transparency of windows set dynamic_background_opacity yes
 ##: yes (this is off by default as it has a performance cost)
 
 #background_image none
@@ -663,7 +663,7 @@ tab_bar_background none
 ##: When background image is scaled, whether linear interpolation
 ##: should be used.
 
-#dynamic_background_opacity no
+dynamic_background_opacity yes
 
 ##: Allow changing of the background_opacity dynamically, using either
 ##: keyboard shortcuts (increase_background_opacity and
@@ -737,19 +737,15 @@ tab_bar_background none
 
 ##: white
 
-#mark1_foreground black
+## ERROR hightlight
 
-##: Color for marks of type 1
+mark1_foreground white
+mark1_background red
 
-#mark1_background #98d3cb
+## WARNING highlight
 
-##: Color for marks of type 1 (light steel blue)
-
-#mark2_foreground black
-
-##: Color for marks of type 2
-
-#mark2_background #f2dcd3
+mark2_foreground black
+mark2_background yellow
 
 ##: Color for marks of type 1 (beige)
 
@@ -1147,7 +1143,7 @@ map kitty_mod+right next_tab
 map kitty_mod+left  previous_tab
 #map kitty_mod+t     new_tab
 map kitty_mod+t new_tab_with_cwd
-map kitty_mod+q     close_tab
+map kitty_mod+w     close_tab
 map kitty_mod+.     move_tab_forward
 map kitty_mod+,     move_tab_backward
 map kitty_mod+alt+t set_tab_title
@@ -1314,4 +1310,5 @@ map kitty_mod+delete clear_terminal reset active
 
 #: }}}
 
+map f1 toggle_marker iregex 1 \\bERROR\\b 2 \\bWARNING\\b
 # }}}
