--- a/.config/picom.conf
+++ b/.config/picom.conf
@@ -152,8 +152,8 @@ focus-exclude = [ "class_g = 'Cairo-clock'" ];
 #    opacity-rule = [ "80:class_g = 'URxvt'" ];
 #
 opacity-rule = [
-	"90:class_g = 'kitty'",
-	"90:class_g = 'Rofi'"
+	"100:class_g = 'kitty'",
+	"90:class_g = 'Rofi'",
 ]
 
 
@@ -164,7 +164,7 @@ opacity-rule = [
 
 # Parameters for background blurring, see the *BLUR* section for more information.
 blur-method = "dual_kawase"
-blur-strength = 4
+blur-strength = 6
 # blur-size = 12
 #
 # blur-deviation = false
