--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,6 +1,7 @@
 # vim:fileencoding=utf-8:ft=conf:foldmethod=marker
 
 include ~/.config/kitty/themes/gruvbox_dark_hard.conf
+# include ~/.config/kitty/themes/gruvbox_light_soft.conf
 
 #: Fonts {{{
 
@@ -8,7 +9,9 @@ include ~/.config/kitty/themes/gruvbox_dark_hard.conf
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-font_family      JetBrainsMono Nerd Font
+# font_family      JetBrainsMono Nerd Font
+# font_family JetBrains Mono Regular Nerd Font Complete Mono
+font_family      Iosevka Term Medium Nerd Font Complete Mono
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
@@ -25,7 +28,8 @@ bold_italic_font auto
 #:     italic_font      Operator Mono Book Italic
 #:     bold_italic_font Operator Mono Medium Italic
 
-font_size 10.5
+# font_size 10.5
+font_size 12
 
 #: Font size (in pts)
 
@@ -49,7 +53,7 @@ force_ltr no
 #: support, because it will force kitty to always treat the text as
 #: LTR, which FriBidi expects for terminals.
 
-adjust_line_height  1
+adjust_line_height  2
 adjust_column_width 0
 
 #: Change the size of each character cell kitty renders. You can use
@@ -631,7 +635,7 @@ tab_bar_background none
 
 ##: The foreground and background colors
 
-background_opacity 0.7
+background_opacity 0.8
 
 ##: The opacity of the background. A number between 0 and 1, where 1 is
 ##: opaque and 0 is fully transparent.  This will only work if
