--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -1,22 +1,21 @@
 {
   "coc.preferences.formatOnSaveFiletypes": [
-    "json",
-    "c",
-    "java",
-    "javascript",
-    "typescript",
-    "typscript",
-    "python",
-    "css",
-    "markdown",
-    "yaml",
-    "sql",
-    "html",
-    "javascriptreact",
-    "typescriptreact"
+    // "json",
+    // "c",
+    // "java",
+    // "javascript",
+    // "typescript",
+    // "typscript",
+    // "css",
+    // "markdown",
+    // "yaml",
+    // "sql",
+    // "html",
+    // "javascriptreact",
+    // "typescriptreact"
   ],
   "prettier.singleQuote": true,
-  "prettier.semi": true,
+  "prettier.semi": false,
   "prettier.tabWidth": 2,
   "prettier.arrowParens": "always",
   "prettier.trailingComma": "all",
@@ -25,15 +24,14 @@
   "explorer.file.reveal.auto": true,
   "explorer.icon.enableNerdfont": true,
   "explorer.previewAction.onHover": false,
+  "explorer.file.showHiddenFiles": true,
   "explorer.file.reveal.whenOpen": true,
   "explorer.file.child.template": "[git | 2] [selection | clip | 1] [indent][icon | 1] [diagnosticError & 1][filename omitCenter 1][modified][readonly] [linkIcon & 1][link growRight 1 omitCenter 5]",
   "explorer.keyMappings.global": {
     "i": false,
     "<c-o>": "noop",
-
     "*": "toggleSelection",
     "<tab>": "actionMenu",
-
     "gk": ["wait", "expandablePrev"],
     "gj": ["wait", "expandableNext"],
     "h": ["wait", "collapse"],
@@ -60,7 +58,6 @@
     "Il": "previewOnHover:toggle:labeling",
     "Ic": "previewOnHover:toggle:content",
     "II": "previewOnHover:disable",
-
     "yp": "copyFilepath",
     "yn": "copyFilename",
     "yy": "copyFile",
@@ -68,44 +65,35 @@
     "p": "pasteFile",
     "df": "delete",
     "dF": "deleteForever",
-
     "a": "addFile",
     "A": "addDirectory",
     "r": "rename",
-
     "zh": "toggleHidden",
     "g<dot>": "toggleHidden",
     "R": "refresh",
-
     "?": "help",
     "q": "quit",
     "<esc>": "esc",
     "X": "systemExecute",
     "gd": "listDrive",
-
     "f": "search",
     "F": "searchRecursive",
-
     "gf": "gotoSource:file",
     "gb": "gotoSource:buffer",
-
     "[[": ["wait", "sourcePrev"],
     "]]": ["wait", "sourceNext"],
-
     "[i": ["wait", "indentPrev"],
     "]i": ["wait", "indentNext"],
-
     "[m": ["wait", "markPrev:modified"],
     "]m": ["wait", "markNext:modified"],
-
     "[d": ["wait", "markPrev:diagnosticError:diagnosticWarning"],
     "]d": ["wait", "markNext:diagnosticError:diagnosticWarning"],
     "[D": ["wait", "markPrev:diagnosticError"],
     "]D": ["wait", "markNext:diagnosticError"],
-
     "[c": ["wait", "markPrev:git"],
     "]c": ["wait", "markNext:git"],
     "<<": "gitStage",
     ">>": "gitUnstage"
-  }
+  },
+  "svelte.enable-ts-plugin": true
 }
