--- a/.editorconfig
+++ b/.editorconfig
@@ -6,7 +6,7 @@ end_of_line = lf
 charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = true
-indent_style = tab
+indent_style = space
 
 [*.txt]
 indent_style = tab
@@ -19,6 +19,13 @@ indent_size = 4
 [*.{js,ts,jsx,tsx,json,yml}]
 indent_style = space
 indent_size = 2
+
+[*.{go}]
+indent_style = space
+indent_size = 2
+
+[*.{js,ts,jsx,tsx}]
+quote_type = single
 
 [*.{diff,md}]
 trim_trailing_whitespace = false
